# backend/internal/web/web.go
@@ -6,7 +6,6 @@ import (
 	"io"
 	"io/fs"
 	"net/http"
-	"strings"
 
 	"github.com/halimath/fate-core-remote-table/backend/internal/auth"
 	"github.com/halimath/fate-core-remote-table/backend/internal/domain/usecase"
@@ -58,13 +57,6 @@ func Provide(cfg config.Config, logger kvlog.Logger, version, commit string,
 		response.JSON(w, r, versionInfo)
 	})
 
-	// HandlerWithOptions(&restHandler{
-	// 	service:      srv,
-	// 	authProvider: authProvider,
-	// }, StdHTTPServerOptions{
-	// 	Middlewares: []MiddlewareFunc{authMiddleware(authProvider)},
-	// })))
-
 	staticFilesFS, err := fs.Sub(staticFiles, "public")
 	if err != nil {
 		panic(err)
@@ -91,41 +83,4 @@ func bindBody(r *http.Request, payload any) error {
 	}
 
 	return json.Unmarshal(data, payload)
-}
-
-func extractBearerToken(r *http.Request) (string, bool) {
-	authHeader := r.Header.Get("Authorization")
-	if len(authHeader) == 0 {
-		return "", false
-	}
-
-	if !strings.HasPrefix(strings.ToLower(authHeader), "bearer ") {
-		return "", false
-	}
-
-	return authHeader[len("bearer "):], true
-
-}
-
-func authMiddleware(m *auth.TokenHandler) func(http.Handler) http.Handler {
-	return func(next http.Handler) http.Handler {
-		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-			tokenString, ok := extractBearerToken(r)
-			if !ok {
-				next.ServeHTTP(w, r)
-				return
-			}
-
-			sub, err := m.Authorize(tokenString)
-			if err != nil {
-				kvlog.L.Logs("invalidAuthToken", kvlog.WithErr(err))
-				next.ServeHTTP(w, r)
-				return
-			}
-
-			r = r.WithContext(auth.WithUserID(r.Context(), sub))
-
-			next.ServeHTTP(w, r)
-		})
-	}
 }
